Fix drag handle alignment

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@
 
 .segment h5 {
 	font-weight: bold;
-	margin-left: 1em;
+	margin-left: 24px;
 }
 
 .segment h5:after {
@@ -45,24 +45,25 @@
 	content: " ?: ";
 }
 
-.segment > .delete-segment {
+.segment > .delete-segment,
+.segment > .drag-handle {
 	position: absolute;
 	top: 4px;
-	right: 4px;
 	display: block;
 	cursor: pointer;
+	font-weight: bold;
+	line-height: 24px;
 	font-size: 24px;
-	line-height: 1em;
+	width: 24px;
+	height: 24px;
+}
+
+.segment > .delete-segment {
+	right: 4px;
 }
 
 .segment .drag-handle {
-	position: absolute;
 	left: 4px;
-	top: 8px;
-	display: block;
-	font-size: 24px;
-	line-height: 1em;
-	font-weight: bold;
 }
 
 .figure-header {
